# kind-web-controller

./: .dockerignore  .gitignore  README.md  config.py  kind_routes.py  main.py  models.py  plugins_routes.py  pyproject.toml  requirements.txt  utils.py
static/: stream.js  style.css
templates/: base.html  cluster_row.html  cluster_table.html  cluster_template.yaml.j2  config_feedback.html  config_row.html  config_table.html  dashboard.html  kind_admin.html  metallb.yaml.j2
